--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,15 @@
     package="hr.dominikricko.rma_lv2">
 
     <application
+        android:name=".context.ApplicationContext"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RMA_LV2">
+        android:theme="@style/Theme.RMA_LV2"
+        android:fullBackupContent="@xml/backup_descriptor">
+        <activity android:name=".activities.AddPersonActivity" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
